samples/_failures_safe/1761344719_9e4336_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6385c69.c: In function ‘main’:
./samples/SAFE/__tmp_b6385c69.c:157:9: error: expected expression at end of input
  157 |         {0, 1,
      |         ^
./samples/SAFE/__tmp_b6385c69.c:157:9: error: expected declaration or statement at end of input
